[package]
name = "bass-rs"
version = "1.0.0"
authors = ["KernelError <villainkernelerror@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bass-sys = "2.2.0"
thiserror = "1.0.34"

[target.'cfg(target_os = "windows")'.dependencies]
widestring = "1.0.2"
